polishing libraries